      later. [ticket:1238]
      
    - Added NotImplementedError for params() method
      on Insert/Update/Delete constructs.  These items
      currently don't support this functionality, which
      also would be a little misleading compared to
      values().

    - the "passive" flag on session.is_modified()
      is correctly propagated to the attribute manager.

- documentation
    - Tickets [ticket:1200] [ticket:1149].
      
    - Added note about create_session() defaults.
    
    - Added section about metadata.reflect().
    
    - Updated `TypeDecorator` section.
    
    - Rewrote the "threadlocal" strategy section of 
      the docs due to recent confusion over this 
      feature.
     
    - Removed badly out of date 'polymorphic_fetch'
      and 'select_table' docs from inheritance, 
      reworked the second half of "joined table
      inheritance".
      
    - Documented `comparator_factory` kwarg, added
      new doc section "Custom Comparators".
    
- postgres
    - Calling alias.execute() in conjunction with
      server_side_cursors won't raise AttributeError.

- oracle
    - Adjusted the format of create_xid() to repair
      two-phase commit.   We now have field reports
      of Oracle two-phase commit working properly
      with this change.
      
0.5.0rc4
========
- features
- orm
    - Query.count() has been enhanced to do the "right
      thing" in a wider variety of cases. It can now
      count multiple-entity queries, as well as
      column-based queries. Note that this means if you
      say query(A, B).count() without any joining
      criterion, it's going to count the cartesian
      product of A*B. Any query which is against
      column-based entities will automatically issue
      "SELECT count(1) FROM (SELECT...)" so that the
      real rowcount is returned, meaning a query such as
      query(func.count(A.name)).count() will return a value of
      one, since that query would return one row.
    